Fixed united nav-collapse form and hover

--- a/united/bootstrap.css
+++ b/united/bootstrap.css
@@ -3363,6 +3363,21 @@ a.thumbnail:hover {
 .navbar-search .search-query {
   border: 1px solid #97310e;
 }
+.navbar .nav-collapse > .nav > li a {
+  color: #ffffff;
+  border-left: 0px solid #dd4814;
+  border-right: 0px solid #dd4814;
+}
+.navbar .nav-collapse > .nav > li a:hover {
+  background-color: #A6350F;
+}
+.navbar .nav-collapse .navbar-form, .navbar .nav-collapse .navbar-search {
+  border-top: 0px solid #dd4814;
+  border-bottom: 0px solid #dd4814;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+}
 .btn-primary {
   background-color: #e86537;
   background-image: -moz-linear-gradient(top, #ef784e, #dd4814);
