--- a/united/bootswatch.less
+++ b/united/bootswatch.less
@@ -33,6 +33,23 @@
 	border: 1px solid darken(@navbarBackground, 15%);
 }
 
+.navbar .nav-collapse > .nav > li a {
+	color: @white;
+	border-left: 0px solid @orange;
+	border-right: 0px solid @orange;
+}
+
+.navbar .nav-collapse > .nav > li a:hover {
+	background-color: #A6350F;
+}
+
+.navbar .nav-collapse .navbar-form,
+.navbar .nav-collapse .navbar-search {
+	border-top: 0px solid @orange;
+	border-bottom: 0px solid @orange;
+	.box-shadow(none);
+}
+
 // BUTTONS
 // -----------------------------------------------------
 
